feat: add department swagger
