# src/controller/router.ts
@@ -4,6 +4,7 @@ import authRouter from './auth/router';
 import productRouter from './product/router';
 import tagRouter from './tag/router';
 import imageRouter from './image/router';
+import departmentRouter from './depeartment/router';
 
 const router = Router();
 
@@ -12,5 +13,6 @@ router.use('/auth', authRouter);
 router.use('/products', productRouter);
 router.use('/tags', tagRouter);
 router.use('/image', imageRouter);
+router.use('/department', departmentRouter);
 
 export default router;
