# swagger-output.json
@@ -31,14 +31,16 @@
     {
       "name": "Tag",
       "description": "Tag endpoints"
+    },
+    {
+      "name": "Department",
+      "description": "Department endpoints"
     }
   ],
   "paths": {
     "/users/current-user": {
       "get": {
-        "tags": [
-          "User"
-        ],
+        "tags": ["User"],
         "summary": "현재 로그인 유저 정보",
         "description": "",
         "parameters": [
@@ -70,9 +72,7 @@
         ]
       },
       "patch": {
-        "tags": [
-          "User"
-        ],
+        "tags": ["User"],
         "summary": "현재 로그인 유저 정보 수정",
         "description": "",
         "parameters": [
@@ -116,9 +116,7 @@
     },
     "/users/current-user/product/sell": {
       "get": {
-        "tags": [
-          "User"
-        ],
+        "tags": ["User"],
         "summary": "현재 판매 중인 상품 목록",
         "description": "",
         "parameters": [
@@ -152,9 +150,7 @@
     },
     "/users/current-user/product/buy": {
       "get": {
-        "tags": [
-          "User"
-        ],
+        "tags": ["User"],
         "summary": "현재 구매 중인 상품 목록",
         "description": "현재 로그인 유저가 가장 최근에 입찰을 넣은 상품 순서대로 반환합니다.",
         "parameters": [
@@ -213,9 +209,7 @@
     },
     "/auth/sign-up": {
       "post": {
-        "tags": [
-          "Auth"
-        ],
+        "tags": ["Auth"],
         "summary": "회원가입",
         "description": "",
         "responses": {
@@ -244,9 +238,7 @@
     },
     "/auth/sign-in": {
       "post": {
-        "tags": [
-          "Auth"
-        ],
+        "tags": ["Auth"],
         "summary": "로그인",
         "description": "",
         "responses": {
@@ -267,166 +259,6 @@
             "application/json": {
               "schema": {
                 "$ref": "#/components/schemas/LoginReqDTO"
-              }
-            }
-          }
-        }
-      }
-    },
-    "/products/": {
-      "get": {
-        "tags": [
-          "Product"
-        ],
-        "summary": "모든 상품 목록 반환",
-        "description": "",
-        "parameters": [
-          {
-            "name": "search",
-            "in": "query",
-            "required": false,
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ProductResDTO"
-                }
-              }
-            },
-            "description": "OK"
-          }
-        }
-      },
-      "post": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "Authorization",
-            "in": "header",
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "responses": {
-          "201": {
-            "description": "Created"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      }
-    },
-    "/products/{productId}/bidding": {
-      "post": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "productId",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          },
-          {
-            "name": "Authorization",
-            "in": "header",
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "responses": {
-          "201": {
-            "description": "Created"
-          }
-        },
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "type": "object",
-                "properties": {
-                  "biddingPrice": {
-                    "example": "any"
-                  }
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/products/bidding/give-up/{productId}": {
-      "post": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "productId",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          },
-          {
-            "name": "Authorization",
-            "in": "header",
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "responses": {
-          "204": {
-            "description": "No Content"
-          }
-        }
-      }
-    },
-    "/products/bidding/{productId}": {
-      "post": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "productId",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          },
-          {
-            "name": "Authorization",
-            "in": "header",
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "responses": {
-          "201": {
-            "description": "Created"
-          }
-        },
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "type": "object",
-                "properties": {
-                  "biddingPrice": {
-                    "example": "any"
-                  }
-                }
               }
             }
           }
@@ -531,103 +363,6 @@
           }
         }
       }
-    },
-    "/tags/": {
-      "post": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "Authorization",
-            "in": "header",
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "responses": {
-          "201": {
-            "description": "Created"
-          }
-        },
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "type": "object",
-                "properties": {
-                  "productId": {
-                    "example": "any"
-                  },
-                  "tag": {
-                    "example": "any"
-                  }
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/tags/{tagId}": {
-      "delete": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "tagId",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          },
-          {
-            "name": "Authorization",
-            "in": "header",
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "responses": {
-          "204": {
-            "description": "No Content"
-          }
-        }
-      }
-    },
-    "/image/prepare-upload": {
-      "post": {
-        "description": "",
-        "responses": {
-          "201": {
-            "description": "Created"
-          }
-        }
-      }
-    },
-    "/image/upload": {
-      "post": {
-        "description": "",
-        "responses": {
-          "201": {
-            "description": "Created"
-          }
-        },
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "type": "object",
-                "properties": {
-                  "id": {
-                    "example": "any"
-                  }
-                }
-              }
-            }
-          }
-        }
-      }
     }
   },
   "components": {
@@ -659,12 +394,7 @@
             "example": 49
           }
         },
-        "required": [
-          "email",
-          "nickname",
-          "password",
-          "departmentId"
-        ]
+        "required": ["email", "nickname", "password", "departmentId"]
       },
       "CreateUserResDTO": {
         "type": "object",
@@ -690,13 +420,7 @@
             "example": "2024-01-04T00:00:00.000Z"
           }
         },
-        "required": [
-          "id",
-          "email",
-          "nickname",
-          "departmentId",
-          "createdAt"
-        ]
+        "required": ["id", "email", "nickname", "departmentId", "createdAt"]
       },
       "LoginReqDTO": {
         "type": "object",
@@ -710,10 +434,7 @@
             "example": "test1234"
           }
         },
-        "required": [
-          "email",
-          "password"
-        ]
+        "required": ["email", "password"]
       },
       "LoginResDTO": {
         "type": "object",
@@ -723,9 +444,7 @@
             "example": "asfni1nienw1flni.1nfi12nfi1lwfni1.lasdnlfni1lf"
           }
         },
-        "required": [
-          "accessToken"
-        ]
+        "required": ["accessToken"]
       },
       "CurrentUserResDTO": {
         "type": "object",
@@ -754,23 +473,14 @@
                 "example": "컴퓨터학과"
               }
             },
-            "required": [
-              "id",
-              "departmentName"
-            ]
+            "required": ["id", "departmentName"]
           },
           "createdAt": {
             "type": "string",
             "example": "2024-01-04T00:00:00.000Z"
           }
         },
-        "required": [
-          "id",
-          "email",
-          "nickname",
-          "departmentId",
-          "createdAt"
-        ]
+        "required": ["id", "email", "nickname", "departmentId", "createdAt"]
       },
       "CurrentUserUpdateReqDTO": {
         "type": "object",
@@ -784,10 +494,7 @@
             "example": "test1234"
           }
         },
-        "required": [
-          "nickname",
-          "password"
-        ]
+        "required": ["nickname", "password"]
       },
       "CurrentUserUpdateResDTO": {
         "type": "object",
@@ -813,13 +520,7 @@
             "example": "2024-01-04T00:00:00.000Z"
           }
         },
-        "required": [
-          "id",
-          "email",
-          "nickname",
-          "departmentId",
-          "createdAt"
-        ]
+        "required": ["id", "email", "nickname", "departmentId", "createdAt"]
       },
       "CurrentProductSellResDTO": {
         "type": "object",
@@ -999,91 +700,6 @@
           "created_at",
           "updated_at"
         ]
-      },
-      "ProductReqDTO": {
-        "type": "object",
-        "properties": {
-          "search": {
-            "type": "string",
-            "example": "전공책"
-          }
-        },
-        "required": [
-          "search"
-        ]
-      },
-      "ProductResDTO": {
-        "type": "array",
-        "items": {
-          "type": "object",
-          "properties": {
-            "id": {
-              "type": "number",
-              "example": 1
-            },
-            "product_name": {
-              "type": "string",
-              "example": "[급처] 판매 중"
-            },
-            "user_id": {
-              "type": "number",
-              "example": 1
-            },
-            "status": {
-              "type": "string",
-              "example": "progress"
-            },
-            "lower_bound": {
-              "type": "number",
-              "example": 5000
-            },
-            "upper_bound": {
-              "type": "number",
-              "example": 10000
-            },
-            "image": {
-              "type": "object",
-              "properties": {
-                "id": {
-                  "type": "number",
-                  "example": 1
-                },
-                "image_url": {
-                  "type": "string",
-                  "example": "http://localhost:3000/1"
-                }
-              },
-              "required": [
-                "id",
-                "image_url"
-              ]
-            },
-            "department_id": {
-              "type": "number",
-              "example": 1
-            },
-            "created_at": {
-              "type": "string",
-              "example": "2024-01-04T00:00:00.000Z"
-            },
-            "updated_at": {
-              "type": "string",
-              "example": "2024-01-04T00:00:00.000Z"
-            }
-          },
-          "required": [
-            "id",
-            "product_name",
-            "user_id",
-            "status",
-            "lower_bound",
-            "upper_bound",
-            "image",
-            "department_id",
-            "created_at",
-            "updated_at"
-          ]
-        }
       }
     }
   }
